--- a/scripts/manual_validation_results.qmd
+++ b/scripts/manual_validation_results.qmd
@@ -17,6 +17,8 @@ library(networkD3)
 library(highcharter)
 library(ggalluvial)
 library(ggalt)
+library(ctregistries)
+library(here)
 ```
 
 # Manual validation analysis
@@ -35,7 +37,7 @@ final_data |>
 
 final_data |>
   count(is_true_crossreg) |>
-  mutate(percentage = round(n / sum(n) * 100, 2))
+  mutate(percentage = round(n / sum(n) * 100, 0))
 ```
 
 ## Precision by category
@@ -45,7 +47,7 @@ final_data |>
 final_data |>
   group_by(priority) |>
   count(is_true_crossreg) |>
-  mutate(percentage = round(n / sum(n) * 100, 2))
+  mutate(percentage = round(n / sum(n) * 100, 0))
 ```
 
 ## Count for Table 2
@@ -54,7 +56,7 @@ This section presents the number of pairs by registry (EUCTR-ClinicalTrials.gov 
 
 ```{r message = FALSE, warning = FALSE}
 
-trn_trn_table <- readRDS("~/Desktop/Research group Strech/cross-registration/official manual checks (11.09)/trn_manual_checks_11_09_2024.rds")
+trn_trn_table <- readRDS(here::here("data", "crossreg_pipeline_output.rds"))
 ```
 
 ### Overall suspected cross-registrations (n = 625)
@@ -62,26 +64,20 @@ trn_trn_table <- readRDS("~/Desktop/Research group Strech/cross-registration/off
 ```{r message = FALSE, warning = FALSE}
 
 filtered_table <- trn_trn_table |>
-  filter(priority >= 1 & priority <= 4,
-         drks_removed == FALSE,
-         euctr_id_in_euctr == TRUE,
-         trn2 != "2008-004408-29")
+  filter(priority >= 1 & priority <= 4, #select priorities with over 50% precision in pilot
+         drks_removed == FALSE,         #remove TRNs from trials deleted from DRKS registry
+         euctr_id_in_euctr == TRUE,     #select TRNs that are available in EUCTR registry
+         trn2 != "2008-004408-29")      #exclude one additional non-resolving TRN from EUCTR
 
-filtered_table |>
-  filter(str_starts(trn1, "DRKS")) |>
-  count(priority, name = "DRKS_count")
-
-filtered_table |>
-  filter(str_starts(trn2, "DRKS")) |>
-  count(priority, name = "DRKS_count")
-
-filtered_table |>
-  filter(str_starts(trn1, "NCT")) |>
-  count(priority, name = "NCT_count")
-
-filtered_table |>
-  filter(str_starts(trn2, "NCT")) |>
-  count(priority, name = "NCT_count")
+#count of non-euctr trns
+filtered_table |> 
+    rowwise() |> 
+    mutate(
+        registry1 = ctregistries::which_registry(trn1),
+        registry2 = ctregistries::which_registry(trn2),
+        non_euctr_registry = if_else(registry1 == "EudraCT", registry2, registry1)
+        ) |>
+    count(non_euctr_registry, priority)
 ```
 
 **Priority 1:** 9 DRKS, 100 NCT (109 total)
@@ -97,8 +93,7 @@ filtered_table |>
 ```{r message = FALSE, warning = FALSE}
 
 final_data |>
-  group_by(priority) |>
-  count(registry2)
+    count(priority, registry2)
 ```
 
 ### Validated cross-registrations (n = 233)
@@ -107,13 +102,12 @@ final_data |>
 
 final_data |>
   filter(is_true_crossreg == "TRUE") |>
-  group_by(priority) |>
-  count(registry2)
+  count(priority, registry2)
 ```
 
 # Discrepancy analysis
 
-These analyses are going to be conducted in only the pairs that were considered `TRUE` cross-registrations
+The following analyses are going to be conducted only with the pairs that were considered **true cross-registrations**.
 
 ```{r message = FALSE, warning = FALSE}
 
@@ -123,7 +117,7 @@ discrepancy_data <- final_data |>
 
 # Summary results
 
-This analysis was limited to confirmed cross-registrations with a "Complete" recruitment status in both registries
+This analysis was limited to confirmed cross-registrations with a "`Completed`" overall recruitment status in both registries
 
 ```{r message = FALSE, warning = FALSE}
 
@@ -139,6 +133,18 @@ The analysis was conducted on 200 observations, from which 186 were EUCTR-Clinic
 
 ### Main analysis
 
+For the main analysis, summary results were considered as reported (i.e. `has_summary_results_reg1_main == TRUE` or `has_summary_results_reg2_main == TRUE`) if a structure tabular result was available in the registry. Then the results were classified on the following categories:
+
+1.  Results reported only in EUCTR
+
+2.  Results reported in both registries
+
+3.  Results reported only on the other registry (DRKS or ClinicalTrials.gov)
+
+4.  No results reported in both registries
+
+The count and percentage of each category was reported.
+
 ```{r message = FALSE, warning = FALSE}
 
 #overall
@@ -149,8 +155,8 @@ discrepancy_data |>
     has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == FALSE ~ "No results",
     has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == FALSE ~ "Only EUCTR",
     has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == TRUE ~ "Both",
-    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Other registry"),
-    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Only other registry"),
+    result_label = factor(result_label, levels = c("Only other registry", "Both", "Only EUCTR", "No results"))) |>
   group_by(result_label) |>
   summarise(count = n(), .groups = 'drop') |>
   mutate(percentage = count / sum(count) * 100) |>
@@ -165,8 +171,8 @@ discrepancy_data |>
     has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == FALSE ~ "No results",
     has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == FALSE ~ "Only EUCTR",
     has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == TRUE ~ "Both",
-    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Other registry"),
-    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Only other registry"),
+    result_label = factor(result_label, levels = c("Only other registry", "Both", "Only EUCTR", "No results"))) |>
   group_by(result_label) |>
   summarise(count = n(), .groups = 'drop') |>
   mutate(percentage = count / sum(count) * 100) |>
@@ -181,8 +187,8 @@ discrepancy_data |>
     has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == FALSE ~ "No results",
     has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == FALSE ~ "Only EUCTR",
     has_summary_results_reg1_main == TRUE & has_summary_results_reg2_main == TRUE ~ "Both",
-    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Other registry"),
-    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+    has_summary_results_reg1_main == FALSE & has_summary_results_reg2_main == TRUE ~ "Only other registry"),
+    result_label = factor(result_label, levels = c("Only other registry", "Both", "Only EUCTR", "No results"))) |>
   group_by(result_label) |>
   summarise(count = n(), .groups = 'drop') |>
   mutate(percentage = count / sum(count) * 100) |>
@@ -191,6 +197,10 @@ discrepancy_data |>
 
 ### Sensitivity analysis
 
+For the sensitivity analysis, summary results were considered as reported (i.e. `has_summary_results_reg1_sensitivity == TRUE` or `has_summary_results_reg2_sensitivity == TRUE`) if a structure tabular result, link to a file that reported results (such as synopsis, study reports, etc.), or link to a termination statement was available in the registry.
+
+The results were classified in the same categories as the main analysis. The count and percentage were reported.
+
 ```{r message = FALSE, warning = FALSE}
 
 #overall
@@ -201,8 +211,8 @@ discrepancy_data |>
     has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == FALSE ~ "No results",
     has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == FALSE ~ "Only EUCTR",
     has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == TRUE ~ "Both",
-    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Other registry"),
-    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Only other registry"),
+    result_label = factor(result_label, levels = c("Only other registry", "Both", "Only EUCTR", "No results"))) |>
   group_by(result_label) |>
   summarise(count = n(), .groups = 'drop') |>
   mutate(percentage = count / sum(count) * 100) |>
@@ -217,8 +227,8 @@ discrepancy_data |>
     has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == FALSE ~ "No results",
     has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == FALSE ~ "Only EUCTR",
     has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == TRUE ~ "Both",
-    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Other registry"),
-    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Only other registry"),
+    result_label = factor(result_label, levels = c("Only other registry", "Both", "Only EUCTR", "No results"))) |>
   group_by(result_label) |>
   summarise(count = n(), .groups = 'drop') |>
   mutate(percentage = count / sum(count) * 100) |>
@@ -233,8 +243,8 @@ discrepancy_data |>
     has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == FALSE ~ "No results",
     has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == FALSE ~ "Only EUCTR",
     has_summary_results_reg1_sensitivity == TRUE & has_summary_results_reg2_sensitivity == TRUE ~ "Both",
-    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Other registry"),
-    result_label = factor(result_label, levels = c("Other registry", "Both", "Only EUCTR", "No results"))) |>
+    has_summary_results_reg1_sensitivity == FALSE & has_summary_results_reg2_sensitivity == TRUE ~ "Only other registry"),
+    result_label = factor(result_label, levels = c("Only other registry", "Both", "Only EUCTR", "No results"))) |>
   group_by(result_label) |>
   summarise(count = n(), .groups = 'drop') |>
   mutate(percentage = count / sum(count) * 100) |>
